# booleann

./: .gitignore  LICENSE  README.md  requirements.txt
cpp/: CMakeLists.txt
cpp/src/: bci_bench.cpp  bci_main.cpp  build_hamcg_shards.cpp  build_hamcg_shards_laion.cpp  build_shard_clusters.cpp  build_shard_clusters_laion.cpp  extract_sweet_spot_tags.cpp  extract_sweet_spot_tags_laion.cpp  laion_bci_bench.cpp  query_shard_test.cpp  sift100m_bci_bench.cpp  yfcc_probe.cpp
data/: README.md
python/data_prep/: fit_yfcc10m_kmeans_torch.py  gen_yfcc10m_gt_matched_v6.py  laion_prepare.py  laion_richer_filters.py  prepare_sift100m_unified.py  sift100m_build_conjunction_data.py  sift100m_gen_conjunction_gt.py
python/method/: arwgi_canonical_60_70.py  arwgi_proper_deploy.py  arwgi_proper_plot.py  arwgi_sift100m_deploy.py  bci_exact_only_yfcc10m.py  bci_hamcg_laion1m_richer.py  cert_e_bridge.py  dkw_calibration_yfcc10m.py  hamcg_sift1b_clean.py  pac_t1a_audit.py  sanity_check_td_sentinel.py
scripts/: 01_install.sh  02_download_datasets.sh  10_reproduce_dkw_calibration.sh  11_reproduce_yfcc10m.sh  12_reproduce_sift100m.sh  13_reproduce_sift1b.sh  14_reproduce_laion1m.sh  15_reproduce_td_sentinel.sh
